fixed overflow

--- a/admin/style.css
+++ b/admin/style.css
@@ -6,4 +6,5 @@ main {
 
 body {
     height : 100vh;
+    overflow-x: hidden;
 }
